Fix spacing issues in code

--- a/projects/tareuhhhhhh-gaming-v2/css/modules/graphic-diptych.css
+++ b/projects/tareuhhhhhh-gaming-v2/css/modules/graphic-diptych.css
@@ -21,6 +21,8 @@ graphic-diptych text-content {
 
 graphic-diptych picture {
   padding-top: 15px;
+  width: 100%;
+  display: none;
 }
 
 .welcome {
@@ -71,6 +73,6 @@ graphic-diptych picture {
   }
 
   graphic-diptych text-content {
-    order:  1;
+    
   }
 }
